bug fixes related to collapse;

--- a/css/main.css
+++ b/css/main.css
@@ -2674,6 +2674,7 @@ hr {
   width: 100%;
 }
 /* Latest changes */
+
 .bottom-spacer{
   margin-top: 59px;
   height: 1px;
@@ -2881,8 +2882,20 @@ label.card-label::after{
 #time-select{
   text-align: left;
 }
-
+.radio-buttons-block [type="radio"]:checked + label .card-radio-header{
+  border:2px solid #1f95db ;
+  border-bottom: 1px solid #1f95db;
+}
+.radio-buttons-block [type="radio"]:checked + label .card-radio-body{
+  border:2px solid #1f95db ;
+  border-top: 1px solid #1f95db;
+}
 @media (max-width:767px) {
+  .full-width-mobile > input[disabled],
+  .full-width-mobile > input,
+  .full-width-mobile{
+    width: 100%;
+  }
   ul.add-on-offer-list{
     margin-left: -10px;
     margin-right: -10px;
